--- a/jobchat-app/package.json
+++ b/jobchat-app/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@oku-ui/motion": "^0.4.3",
     "core-js": "^3.8.3",
     "firebase": "^11.6.0",
     "pinia": "^3.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
