specifying targets on merge workflow so that we can render the two different sites

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -34,3 +34,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CHATAPPLY_E7A35 }}
           channelId: live
           projectId: chatapply-e7a35
+          targets: main,static-content # Add this line to specify targets
