IQHIRE-21 started adding organization logic, deployed two new organization functions to create and fetch a users orgs

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@mdi/font": "^7.4.47"
+  }
 }
