--- a/jobchat-app/package.json
+++ b/jobchat-app/package.json
@@ -8,10 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
     "@oku-ui/motion": "^0.4.3",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
     "firebase": "^11.6.0",
+    "gridstack": "^12.0.0",
     "pinia": "^3.0.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.8.1"
