schema addition, fix landing page, beginning refactor for new schema

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -35,3 +35,5 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CHATAPPLY_E7A35 }}
           projectId: chatapply-e7a35
+          targets: main,static-content # Add this line to specify targets
+
