--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^6.3.2"
