--- a/jobchat-app/package.json
+++ b/jobchat-app/package.json
@@ -12,6 +12,7 @@
     "@oku-ui/motion": "^0.4.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
     "firebase": "^11.6.0",
