--- a/jobchat-app/package.json
+++ b/jobchat-app/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@oku-ui/motion": "^0.4.3",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.9",
@@ -18,8 +17,6 @@
     "firebase": "^11.6.0",
     "gridstack": "^12.0.0",
     "pinia": "^3.0.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.8.1"
@@ -30,8 +27,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6"
   },
   "eslintConfig": {
     "root": true,
