--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "description": "",
   "dependencies": {
     "@mdi/font": "^7.4.47"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
