--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,11 @@
     "@google/genai": "^1.0.1",
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.1",
+    "busboy": "1.6.0",
     "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^6.3.2"
+    "firebase-functions": "^6.3.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
