--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@google/genai": "^1.0.1",
     "@google/generative-ai": "^0.24.1",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
     "busboy": "1.6.0",
     "cors": "^2.8.5",
